@@ -22,9 +22,9 @@ class Article0004 extends SeleniumJoomlaTestCase
 		$this->click("link=Article Manager");
 		$this->waitForPageToLoad("30000");
 		echo "Check that first three articles are Public Access Level\n";
-		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.1.6"));
-		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.2.6"));
-		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.3.6"));
+		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.1.4"));
+		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.2.4"));
+		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.3.4"));
 		echo "Select first three articles\n";
 		$this->click("cb0");
 		$this->click("cb1");
@@ -34,12 +34,12 @@ class Article0004 extends SeleniumJoomlaTestCase
 		$this->click("//button[@type='submit' and @onclick=\"Joomla.submitbutton('article.batch');\"]");
 		$this->waitForPageToLoad("30000");
 		echo "Check for success message\n";
-		$this->assertTrue($this->isElementPresent("//dl[@id=\"system-message\"][contains(., 'success')]"));
+		$this->assertTrue($this->isElementPresent("//div[@id=\"system-message\"][contains(., 'success')]"));
 
 		echo "Check that first three articles are Special Access Level\n";
-		$this->assertEquals("Special", $this->getTable("//form[@id='adminForm']/table.1.6"));
-		$this->assertEquals("Special", $this->getTable("//form[@id='adminForm']/table.2.6"));
-		$this->assertEquals("Special", $this->getTable("//form[@id='adminForm']/table.3.6"));
+		$this->assertEquals("Special", $this->getTable("//form[@id='adminForm']/table.1.4"));
+		$this->assertEquals("Special", $this->getTable("//form[@id='adminForm']/table.2.4"));
+		$this->assertEquals("Special", $this->getTable("//form[@id='adminForm']/table.3.4"));
 		echo "Change back to Public and check\n";
 		$this->click("cb0");
 		$this->click("cb1");
@@ -48,10 +48,10 @@ class Article0004 extends SeleniumJoomlaTestCase
 		$this->click("//button[@type='submit' and @onclick=\"Joomla.submitbutton('article.batch');\"]");
 		$this->waitForPageToLoad("30000");
 		echo "Check for success message\n";
-		$this->assertTrue($this->isElementPresent("//dl[@id=\"system-message\"][contains(., 'success')]"));
-		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.1.6"));
-		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.2.6"));
-		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.3.6"));
+		$this->assertTrue($this->isElementPresent("//div[@id=\"system-message\"][contains(., 'success')]"));
+		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.1.4"));
+		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.2.4"));
+		$this->assertEquals("Public", $this->getTable("//form[@id='adminForm']/table.3.4"));
 
 		echo "Finished testBatchAcessLevels\n";
 
@@ -67,12 +67,9 @@ class Article0004 extends SeleniumJoomlaTestCase
 		$this->click("link=Article Manager");
 		$this->waitForPageToLoad("30000");
 		echo "Check that first three articles are as expected\n";
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.1.1"), 'Alias: administrator-components'));
-		$this->assertEquals("Components", $this->getTable("//form[@id='adminForm']/table.1.4"));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.2.1"), '(Alias: archive-module'));
-		$this->assertEquals("Content Modules", $this->getTable("//form[@id='adminForm']/table.2.4"));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.3.1"), 'Alias: article-categories-module'));
-		$this->assertEquals("Content Modules", $this->getTable("//form[@id='adminForm']/table.3.4"));
+		$this->assertStringStartsWith('Administrator Components', $this->getTable("//form[@id='adminForm']/table.1.3"));
+		$this->assertStringStartsWith('Archive Module', $this->getTable("//form[@id='adminForm']/table.2.3"));
+		$this->assertStringStartsWith('Article Categories Module', $this->getTable("//form[@id='adminForm']/table.3.3"));
 		echo "Select first three articles and batch copy to Park Site\n";
 		$this->click("cb0");
 		$this->click("cb1");
@@ -82,13 +79,13 @@ class Article0004 extends SeleniumJoomlaTestCase
 		$this->click("//button[@type='submit' and @onclick=\"Joomla.submitbutton('article.batch');\"]");
 		$this->waitForPageToLoad("30000");
 		echo "Check for success message\n";
-		$this->assertTrue($this->isElementPresent("//dl[@id=\"system-message\"][contains(., 'success')]"));
+		$this->assertTrue($this->isElementPresent("//div[@id=\"system-message\"][contains(., 'success')]"));
 		echo "Check that new articles are in Park Site category\n";
 		$this->select("filter_category_id", "label=- Park Site");
 		$this->waitForPageToLoad("30000");
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.1.1"), 'Alias: administrator-components'));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.2.1"), '(Alias: archive-module'));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.3.1"), 'Alias: article-categories-module'));
+		$this->assertStringStartsWith('Administrator Components', $this->getTable("//form[@id='adminForm']/table.1.3"));
+		$this->assertStringStartsWith('Archive Module', $this->getTable("//form[@id='adminForm']/table.2.3"));
+		$this->assertStringStartsWith('Article Categories Module', $this->getTable("//form[@id='adminForm']/table.3.3"));
 		echo "Trash and delete new articles\n";
 		$this->click("cb0");
 		$this->click("cb1");
@@ -106,26 +103,22 @@ class Article0004 extends SeleniumJoomlaTestCase
 		$this->waitForPageToLoad("30000");
 
 		echo "Check that first three articles are as expected\n";
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.1.1"), 'Alias: administrator-components'));
-		$this->assertEquals("Components", $this->getTable("//form[@id='adminForm']/table.1.4"));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.2.1"), 'Alias: archive-module'));
-		$this->assertEquals("Content Modules", $this->getTable("//form[@id='adminForm']/table.2.4"));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.3.1"), 'Alias: article-categories-module'));
-		$this->assertEquals("Content Modules", $this->getTable("//form[@id='adminForm']/table.3.4"));
+		$this->assertStringStartsWith('Administrator Components', $this->getTable("//form[@id='adminForm']/table.1.3"));
+		$this->assertStringStartsWith('Archive Module', $this->getTable("//form[@id='adminForm']/table.2.3"));
+		$this->assertStringStartsWith('Article Categories Module', $this->getTable("//form[@id='adminForm']/table.3.3"));
 
 		echo "Test copying to same category\n";
 		echo "Select first article and copy to Components\n";
-		$this->assertEquals("Components", $this->getTable("//form[@id='adminForm']/table.1.4"));
+		$this->assertStringStartsWith('Administrator Components', $this->getTable("//form[@id='adminForm']/table.1.3"));
 		$this->click("cb0");
 		$this->click("batch[move_copy]c");
 		$this->select("batch-category-id", "label=- - - Components");
 		$this->click("//button[@type='submit' and @onclick=\"Joomla.submitbutton('article.batch');\"]");
 		$this->waitForPageToLoad("30000");
 		echo "Check for success message\n";
-		$this->assertTrue($this->isElementPresent("//dl[@id=\"system-message\"][contains(., 'success')]"));
+		$this->assertTrue($this->isElementPresent("//div[@id=\"system-message\"][contains(., 'success')]"));
 		echo "Check that new article is created with correct name and alias\n";
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.2.1"), 'Alias: administrator-components-2'));
-		$this->assertEquals("Components", $this->getTable("//form[@id='adminForm']/table.2.4"));
+		$this->assertStringStartsWith('Administrator Components', $this->getTable("//form[@id='adminForm']/table.2.3"));
 		echo "Trash and delete new article\n";
 		$this->click("cb1");
 		$this->click("//div[@id='toolbar-trash']/button");
@@ -152,12 +145,12 @@ class Article0004 extends SeleniumJoomlaTestCase
 		$this->click("link=Article Manager");
 		$this->waitForPageToLoad("30000");
 		echo "Check initial values for articles";
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.2.1"), 'Alias: archive-module'));
-		$this->assertEquals("Content Modules", $this->getTable("//form[@id='adminForm']/table.2.4"));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.3.1"), 'Alias: article-categories-module'));
-		$this->assertEquals("Content Modules", $this->getTable("//form[@id='adminForm']/table.3.4"));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.4.1"), 'Alias: articles-category-module'));
-		$this->assertEquals("Content Modules", $this->getTable("//form[@id='adminForm']/table.4.4"));
+		$this->assertStringStartsWith('Archive Module', $this->getTable("//form[@id='adminForm']/table.2.3"));
+		$this->assertStringStartsWith('Article Categories Module', $this->getTable("//form[@id='adminForm']/table.3.3"));
+		$this->assertStringStartsWith('Articles Category Module', $this->getTable("//form[@id='adminForm']/table.4.3"));
+		$this->assertStringEndsWith('Category: Content Modules', $this->getTable("//form[@id='adminForm']/table.2.3"));
+		$this->assertStringEndsWith('Category: Content Modules', $this->getTable("//form[@id='adminForm']/table.3.3"));
+		$this->assertStringEndsWith('Category: Content Modules', $this->getTable("//form[@id='adminForm']/table.4.3"));
 		echo "Move Archive Module, Content Modules, Article Categories Module to Languages Category\n";
 		$this->click("cb1");
 		$this->click("cb2");
@@ -166,14 +159,14 @@ class Article0004 extends SeleniumJoomlaTestCase
 		$this->click("//button[@type='submit' and @onclick=\"Joomla.submitbutton('article.batch');\"]");
 		$this->waitForPageToLoad("30000");
 		echo "Check for success message\n";
-		$this->assertTrue($this->isElementPresent("//dl[@id=\"system-message\"][contains(., 'success')]"));
-		echo "Check that articles movd to new category\n";
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.2.1"), 'Alias: archive-module'));
-		$this->assertEquals("Languages", $this->getTable("//form[@id='adminForm']/table.2.4"));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.3.1"), 'Alias: article-categories-module'));
-		$this->assertEquals("Languages", $this->getTable("//form[@id='adminForm']/table.3.4"));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.4.1"), 'Alias: articles-category-module'));
-		$this->assertEquals("Languages", $this->getTable("//form[@id='adminForm']/table.4.4"));
+		$this->assertTrue($this->isElementPresent("//div[@id=\"system-message\"][contains(., 'success')]"));
+		echo "Check that articles moved to new category\n";
+		$this->assertStringStartsWith('Archive Module', $this->getTable("//form[@id='adminForm']/table.2.3"));
+		$this->assertStringStartsWith('Article Categories Module', $this->getTable("//form[@id='adminForm']/table.3.3"));
+		$this->assertStringStartsWith('Articles Category Module', $this->getTable("//form[@id='adminForm']/table.4.3"));
+		$this->assertStringEndsWith('Category: Languages', $this->getTable("//form[@id='adminForm']/table.2.3"));
+		$this->assertStringEndsWith('Category: Languages', $this->getTable("//form[@id='adminForm']/table.3.3"));
+		$this->assertStringEndsWith('Category: Languages', $this->getTable("//form[@id='adminForm']/table.4.3"));
 		echo "Move articles back to original category\n";
 		$this->click("cb1");
 		$this->click("cb2");
@@ -182,14 +175,14 @@ class Article0004 extends SeleniumJoomlaTestCase
 		$this->click("//button[@type='submit' and @onclick=\"Joomla.submitbutton('article.batch');\"]");
 		$this->waitForPageToLoad("30000");
 		echo "Check for success message\n";
-		$this->assertTrue($this->isElementPresent("//dl[@id=\"system-message\"][contains(., 'success')]"));
+		$this->assertTrue($this->isElementPresent("//div[@id=\"system-message\"][contains(., 'success')]"));
 		echo "Check that articles are back to original category\n";
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.2.1"), 'Alias: archive-module'));
-		$this->assertEquals("Content Modules", $this->getTable("//form[@id='adminForm']/table.2.4"));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.3.1"), 'Alias: article-categories-module'));
-		$this->assertEquals("Content Modules", $this->getTable("//form[@id='adminForm']/table.3.4"));
-		$this->assertTrue((bool) strpos($this->getTable("//form[@id='adminForm']/table.4.1"), 'Alias: articles-category-module'));
-		$this->assertEquals("Content Modules", $this->getTable("//form[@id='adminForm']/table.4.4"));
+		$this->assertStringStartsWith('Archive Module', $this->getTable("//form[@id='adminForm']/table.2.3"));
+		$this->assertStringStartsWith('Article Categories Module', $this->getTable("//form[@id='adminForm']/table.3.3"));
+		$this->assertStringStartsWith('Articles Category Module', $this->getTable("//form[@id='adminForm']/table.4.3"));
+		$this->assertStringEndsWith('Category: Content Modules', $this->getTable("//form[@id='adminForm']/table.2.3"));
+		$this->assertStringEndsWith('Category: Content Modules', $this->getTable("//form[@id='adminForm']/table.3.3"));
+		$this->assertStringEndsWith('Category: Content Modules', $this->getTable("//form[@id='adminForm']/table.4.3"));
 
 		echo "Finished testBatchMove\n";
 
